PROGRES : Affichage des images

--- a/tp4/PostHubClient/src/app/edit-post/edit-post.component.html
+++ b/tp4/PostHubClient/src/app/edit-post/edit-post.component.html
@@ -19,7 +19,7 @@
         
         <div class="postFooter">
             <!-- Ajouter un input de type file ici ne serait pas bête du tout -->
-            <input #myFileInput type="file" name="image" accept="images/*">
+            <input #myFileInput type="file" name="image" accept="images/*" multiple>
             <button (click)="createPost()">Envoyer</button>
         </div>
         
