--- a/tp4/PostHubClient/src/app/post/post.component.html
+++ b/tp4/PostHubClient/src/app/post/post.component.html
@@ -65,9 +65,9 @@
   
     <!-- Boîte pour créer un commentaire directement associé au commentaire principal de ce post -->
     <div id="commentBox">
-      <input type="text" name="newComment" id="newComment" placeholder="Ajouter un commentaire" [(ngModel)]="newComment">
+      <input  type="text" name="newComment" id="newComment" placeholder="Ajouter un commentaire" [(ngModel)]="newComment" >
       <div *ngIf="displayInputFile" class="commentPictureAdd">
-        <input type="file" accept="images/*" name="commentPictures">
+        <input #myFileInput type="file" accept="images/*" name="commentPictures" multiple>
       </div>
       <button (click)="displayInputFile = !displayInputFile"><fa-icon [icon]="faImage"></fa-icon></button>
       <button (click)="createComment()">Ajouter</button>
