--- a/tp4/PostHubClient/src/app/post/post.component.html
+++ b/tp4/PostHubClient/src/app/post/post.component.html
@@ -30,10 +30,8 @@
       <div *ngIf="!toggleMainCommentEdit">{{post.mainComment!.text}}</div>
       <textarea id="commentTextEdit" *ngIf="toggleMainCommentEdit" type="text" [(ngModel)]="newMainCommentText"></textarea>
       <div class="commentPictures">
-        <!-- Des images pourraient être affichées ici -->
-         <div *ngFor="let i of post.pictureIds" class = "picture">
-          <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + i" alt="Picture">
-         </div>
+        <!-- Des images pourraient être affichées ici -->         
+          <img *ngFor="let i of post.pictureIds" [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + i" alt="Picture">         
       </div>
     </div>
   
