--- a/tp4/PostHubClient/src/app/comment/comment.component.html
+++ b/tp4/PostHubClient/src/app/comment/comment.component.html
@@ -19,10 +19,9 @@
       </div>
       <div class="commentPictures">
         <!-- Afficher les images associées au commentaire -->
-        <div *ngFor="let imageId of comment.imageIds">
-          <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + imageId" alt="Image du commentaire" />
+        <div>
+          <img *ngFor="let imageId of comment.imageIds" [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + imageId" alt="Image du commentaire" />
         </div>
-        
       </div>
     </div>
   
