--- a/tp4/PostHubClient/src/app/profile/profile.component.html
+++ b/tp4/PostHubClient/src/app/profile/profile.component.html
@@ -11,8 +11,12 @@
       <input type="password" name="oldPassword" id="oldPassword" placeholder="Mot de passe actuel" [(ngModel)]="oldPassword">
       <input type="password" name="newPassword" id="newPassword" placeholder="Nouveau mot de passe" [(ngModel)]="newPassword">
       <input type="password" name="newPasswordConfirm" id="newPasswordConfirm" placeholder="Confirmer le nouveau mot de passe" [(ngModel)]="newPasswordConfirm">
-      <input #myFileInput  type="file" accept="images/*" name="Avatar">
       <button>Modifier</button>
+    </div>
+    <div class="profile">
+      <div>Modifier votre avatar</div>
+      <input #myFileInput  type="file" accept="images/*" name="Avatar">
+      <button (click)="uploadPicture()">Modifier</button>
     </div>
   </div>
   
