--- a/tp4/PostHubClient/src/app/app.component.css
+++ b/tp4/PostHubClient/src/app/app.component.css
@@ -150,3 +150,11 @@ main{
     padding:30px 60px;
 }
 
+.arrow{
+    background: gray;
+    border-radius: 25px;
+    height: 50px;
+    width: 50px;
+    display: flex;
+    border: none;
+}
