--- a/tp4/PostHubClient/src/app/post/post.component.html
+++ b/tp4/PostHubClient/src/app/post/post.component.html
@@ -38,7 +38,7 @@
             <div class="glide__track" data-glide-el="track">
               <ul class="glide__slides">
                 <li class="glide__slide" style="height: 200px;" *ngFor="let i of post.pictureIds" #glideitems>
-                  <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + i" alt="Picture" style="object-fit: cover; width: 100%; height: 100%;">
+                 <a [href]="'https://localhost:7216/api/Comments/GetPicture/full/' + i"> <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + i" alt="Picture" style="object-fit: cover; width: 100%; height: 100%;"> </a>
                 </li>
               </ul>
             </div>
