--- a/tp4/PostHubClient/src/app/post/post.component.html
+++ b/tp4/PostHubClient/src/app/post/post.component.html
@@ -38,7 +38,10 @@
             <div class="glide__track" data-glide-el="track">
               <ul class="glide__slides">
                 <li class="glide__slide" style="height: 200px;" *ngFor="let i of post.pictureIds" #glideitems>
+                  <div class="picture-container">
                  <a [href]="'https://localhost:7216/api/Comments/GetPicture/full/' + i"> <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + i" alt="Picture" style="object-fit: cover; width: 100%; height: 100%;"> </a>
+                 <span class="close-button" *ngIf="isAuthor" (click)="deleteImage(i)">×</span>
+                </div>
                 </li>
               </ul>
             </div>
@@ -59,7 +62,12 @@
         </div>
         
         <div *ngIf="post.pictureIds.length < 4">
-          <img *ngFor="let i of post.pictureIds" [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + i" alt="Picture">
+          <div class="picture-container" *ngFor="let i of post.pictureIds">
+            <a [href]="'https://localhost:7216/api/Comments/GetPicture/full/' + i">
+            <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + i" alt="Picture">
+            <span class="close-button" *ngIf="isAuthor" (click)="deleteImage(i)">×</span>
+          </a>
+          </div>
         </div>         
       </div>      
         
