--- a/tp4/PostHubClient/src/app/comment/comment.component.html
+++ b/tp4/PostHubClient/src/app/comment/comment.component.html
@@ -18,15 +18,16 @@
           [(ngModel)]="editedText">{{comment.text}}</textarea>
       </div>
       <div class="commentPictures">
-        <!-- Afficher les images associées au commentaire -->
         <div class="images">
-          
-        <a *ngFor="let imageId of comment.imageIds" [href]="'https://localhost:7216/api/Comments/GetPicture/full/' + imageId">
-          <div class="X">x</div>
-          <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + imageId" alt="Image du commentaire" />
-        </a>
+          <div *ngFor="let imageId of comment.imageIds" class="imageWrapper">
+            <a [href]="'https://localhost:7216/api/Comments/GetPicture/full/' + imageId">
+              <img [src]="'https://localhost:7216/api/Comments/GetPicture/full/' + imageId" alt="Image du commentaire" />
+            </a>
+            <span *ngIf="isAuthor" class="X" (click)="deleteImage(imageId)">×</span>
+          </div>
         </div>
       </div>
+      
     </div>
   
     <!-- Nombreux boutons pour modifier le commentaire (votes, signalement, modification, etc.) -->
