--- a/tp4/PostHubClient/src/app/post/post.component.css
+++ b/tp4/PostHubClient/src/app/post/post.component.css
@@ -213,4 +213,21 @@
     width:20px;
     cursor:pointer;
 }
-
+.picture-container {
+    position: relative;
+    display: inline-block;
+    margin: 5px;
+  }
+  
+  .close-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    font-weight: bold;
+    border-radius: 50%;
+    padding: 2px 6px;
+    cursor: pointer;
+    z-index: 1;
+  }
