--- a/tp4/PostHubClient/src/app/comment/comment.component.html
+++ b/tp4/PostHubClient/src/app/comment/comment.component.html
@@ -56,7 +56,7 @@
       </div>
       <div>
         <!-- Il faudra modifier cet input -->
-        <input *ngIf="editToggle" type="file" accept="images/*" name="editedCommentPictures">
+        <input #myNewFileInput *ngIf="editToggle" type="file" accept="images/*" name="editedCommentPictures" multiple>
       </div>
       <div>
         <button *ngIf="editToggle" (click)="editToggle = false">Annuler</button>
