--- a/tp4/PostHubClient/src/app/app.component.html
+++ b/tp4/PostHubClient/src/app/app.component.html
@@ -25,6 +25,10 @@
 
       <div [routerLink]="['/postList', 'discover']">Découvrir</div>
 
+       <div *ngIf="userservice.roles().includes('moderateur')" [routerLink]="['/reports']">Modération</div>
+
+
+
       <div id="hubs" (click)="toggleHubs()">Vos hubs <fa-icon [icon]="faChevronDown"></fa-icon>
         <div *ngIf="hubsToggled">
           <div *ngFor="let h of hubList" [routerLink]="['/postList/hub', h.id]">✦ {{h.name}}</div>
