--- a/tp4/PostHubClient/src/app/profile/profile.component.html
+++ b/tp4/PostHubClient/src/app/profile/profile.component.html
@@ -11,7 +11,7 @@
       <input type="password" name="oldPassword" id="oldPassword" placeholder="Mot de passe actuel" [(ngModel)]="oldPassword">
       <input type="password" name="newPassword" id="newPassword" placeholder="Nouveau mot de passe" [(ngModel)]="newPassword">
       <input type="password" name="newPasswordConfirm" id="newPasswordConfirm" placeholder="Confirmer le nouveau mot de passe" [(ngModel)]="newPasswordConfirm">
-      <button>Modifier</button>
+      <button (click)="changePassword()">Modifier</button>
     </div>
     <div class="profile">
       <div>Modifier votre avatar</div>
