--- a/tp4/PostHubClient/src/app/admin-tab/admin-tab.component.html
+++ b/tp4/PostHubClient/src/app/admin-tab/admin-tab.component.html
@@ -1,5 +1,5 @@
 <div>
     <h1>Ajouter un modérateur</h1>
     <input type="text" name="Pseudonyme" id="Pseudonyme" placeholder="Pseudonyme" [(ngModel)]="newModeratorUsername"/>
-    <button>Rendre modérateur</button>
+    <button (click)="makeModerator()">Rendre modérateur</button>
 </div>
