--- a/tp4/PostHubClient/src/app/app.component.html
+++ b/tp4/PostHubClient/src/app/app.component.html
@@ -4,7 +4,7 @@
     <!-- Ruban principal -->
     <div id="headerRibbon">
 
-      <div id="title">Post<span>hub</span></div>
+      <div id="title">Post<span>It</span></div>
 
       <input type="text" name="mainSearch" placeholder="Rechercher dans Post hub ..." [(ngModel)]="searchText">
 
